{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 9,
  "lineage": "ba7e2c42-67b8-0d8e-a5ab-e7edb1c39aaa",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_backend_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/allow-backend-to-database",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-backend-to-database",
                "namespace": "default",
                "resource_version": "1132",
                "uid": "7e18461e-e93a-4599-81b2-82f6cb0281d1"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "backend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "database"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-backend-to-database",
            "namespace": "default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_frontend_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/allow-frontend-to-backend",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "allow-frontend-to-backend",
                "namespace": "default",
                "resource_version": "1130",
                "uid": "1a82f3b4-3458-4995-8c59-5e4cce5a6a01"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "frontend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "backend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-frontend-to-backend",
            "namespace": "default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/backend",
            "metadata": [
              {
                "generation": 0,
                "name": "backend",
                "namespace": "default",
                "resource_version": "1131",
                "uid": "eab1674c-3678-4f45-90cd-39e2e5070289"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.99.236.184",
                "cluster_ips": [
                  "10.99.236.184"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "backend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "backend",
            "namespace": "default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/database",
            "metadata": [
              {
                "generation": 0,
                "name": "database",
                "namespace": "default",
                "resource_version": "1136",
                "uid": "1d3b6c04-f3b8-4b42-8d09-0a61262f3320"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.43.179",
                "cluster_ips": [
                  "10.96.43.179"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "database"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "database",
            "namespace": "default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/frontend",
            "metadata": [
              {
                "generation": 0,
                "name": "frontend",
                "namespace": "default",
                "resource_version": "1141",
                "uid": "5a523dc2-7f32-4932-b918-d7e162f8ecf2"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.97.198.239",
                "cluster_ips": [
                  "10.97.198.239"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30390,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "frontend"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "frontend",
            "namespace": "default"
          }
        }
      ]
    }
  ]
}